<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ListActivity">

    <item
        android:id="@+id/empty"
        android:title="@string/action_order"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_more_vert_white">

        <menu>

            <item android:id="@+id/action_order_ascending"
                app:showAsAction="ifRoom"
                android:title="@string/action_order_ascending" />

            <item android:id="@+id/action_order_descending"
                app:showAsAction="ifRoom"
                android:title="@string/action_order_descending" />

        </menu>

    </item>

</menu>
